Complete droplet_setup.sh until traefik running, fixed config files for traefik

--- a/config/traefik_dynamic.toml
+++ b/config/traefik_dynamic.toml
@@ -21,7 +21,7 @@
 
 ## Dynamic configuration
 [http.services]
-  [http.services.saccotruta-api.loadBalancer]
+  [http.services.saccotruta.loadBalancer]
     [[http.services.saccotruta.loadBalancer.servers]]
       url = "http://10.10.10.2"
 
